responsive login,pagination fix,columns align

--- a/frontend/src/styles/adminPanel.css
+++ b/frontend/src/styles/adminPanel.css
@@ -1,56 +1,58 @@
-.admin-panel{
+.admin-panel {
     background: white;
     padding: 50px;
 }
-.ant-table-thead > tr >th{
-    width: 40px;
+
+.ant-table-thead > tr > th {
     color: white;
     background: #2b5c90 !important;
     text-transform: uppercase;
-    text-align: center;
     -moz-text-size-adjust: auto;
 }
-    .rows{
-        text-align: center;
-        font-size: 16px;
-        font-family: "Consolas";
-        inline-size: 10px;
-        overflow-wrap: break-word;
-        word-wrap: break-word;
-        /*background: red;*/
-        height: 10px;
-    }
 
-    .email-column{
-        font-size: 16px;
-        font-family: "Consolas";
-        text-align: center;
-        word-wrap: break-word;
-        max-width: 150px;
-        /*background: red;*/
-    }
+.rows {
+    font-size: 16px;
+    font-family: "Consolas";
+    inline-size: 10px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    height: 10px;
+}
 
+.email-column {
+    font-size: 16px;
+    font-family: "Consolas";
+    word-wrap: break-word;
+    max-width: 150px;
+}
+.num-of-family-members{
+    width:150px;
+}
 
 @media (max-width: 48em) {
-    .table-component{
+    .table-component {
         width: 100%;
     }
-    .admin-panel{
+
+    .admin-panel {
         width: 100%;
         margin-left: 0;
         margin-right: 0;
         padding: 0;
     }
 }
-.table-component{
+
+.table-component {
     box-shadow: 0px 8px 8px -4px gray;
     padding-bottom: 20px;
     overflow: auto;
 }
-.table tr{
+
+.table tr {
     width: 100%;
 }
-.loader-div{
+
+.loader-div {
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -58,16 +60,18 @@
     justify-content: center;
     align-content: center;
 }
-.loader{
-    margin : auto;
+
+.loader {
+    margin: auto;
 }
 
-.loading-message{
+.loading-message {
     padding-top: 15px;
     width: 100%;
     color: #2b5c90;
 }
-.background-div{
+
+.background-div {
     /*background: #00BD9B;*/
     display: flex;
     height: 88vh;
